force-app/main/default/objects/sfpegMessage__mdt/fields/DoConditionEval__c.field-meta.xml
<CustomField>
    <fullName>DoConditionEval__c</fullName>
    <description>Flag to activate dynamic message display condition evaluation</description>
    <inlineHelpText>Flag to activate dynamic message display condition evaluation</inlineHelpText>
    <label>Do Condition Eval ?</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>