force-app/main/default/objects/sfpegMessage__mdt/fields/MessageActions__c.field-meta.xml
<CustomField>
    <fullName>MessageActions__c</fullName>
    <description>Configuration of the Actions used in the message actions (should be a sfpegAction record name)</description>
    <inlineHelpText>Configuration of the Actions used in the message actions (should be a sfpegAction record name)</inlineHelpText>
    <label>Message Actions</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>