force-app/main/default/objects/sfpegMessage__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scope of application for the List Configuration (GLOBAL vs Object specific).</description>
    <inlineHelpText>Scope of application for the List Configuration (GLOBAL vs Object specific).</inlineHelpText>
    <label>Scope</label>
    <type>TextArea</type>
</CustomField>